--- a/Registeringsida/style.css
+++ b/Registeringsida/style.css
@@ -17,7 +17,7 @@ body{
 }
 header {
     width: 100%;
-    
+    font-weight: 500;
     top: 0;
     left: 0;
     width: 100%;
@@ -26,10 +26,12 @@ header {
     display: flex;
     position: fixed;
     align-items: center;
-   
+    font-size: 17px;
     z-index: 99;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-left: 420px;
+  
 }
 
 
