--- a/Todolist/style.css
+++ b/Todolist/style.css
@@ -44,6 +44,7 @@ body {
   }
   #out{
     float: right;
+    margin-top: 20px;
     
   }
 
@@ -66,4 +67,39 @@ body {
     padding: 10px 20px;
     cursor: pointer;
   }
+  header {
+    width: 100%;
+    
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    position: fixed;
+    display: flex;
+    position: fixed;
+    /* z-index: 99; */
+    text-align: center;
+    margin-left: 470px;
+    margin-top: 10px;
+  }
   
+  
+  
+  .nav a {
+    position: relative;
+    font-size: 1.1em;
+    color: black;
+    text-decoration: none;
+    font-weight: 500;
+    margin: 20px 20px;
+    
+    
+  }
+  .nav a:hover{
+    background-color: red;
+    text-decoration: none;
+    border-radius: 8px;
+    padding: 10px 10px;
+    color: #fff;
+  }
+   
